# mcp-server-langfuse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor/rules/: mcp-llms-full.mdc
.github/workflows/: docker-build-publish.yml
mcp_server_langfuse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py  config.ts  index.ts  main.py  mcp_server.py  mcp_server.ts  server.ts  stdio_server.ts  utils.py  utils.ts
