[project]
name = "mcp-server-langfuse"
version = "0.1.0"
description = "A MCP Server for Langfuse Prompt Management, rewritten in Python."
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "langfuse",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "uv",
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
